# Rehti

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  Rehti.cpp  Rehti.h  Rehti.sln  Rehti.vcxproj  Rehti.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.sh  buildWithTests.sh  cmake_install.cmake  vcpkg.json
Editor/: CMakeLists.txt  Editor.sln  cmake_install.cmake
Editor/src/: RehtiEditor.cpp
Engine/: CMakeLists.txt  Engine.sln  cmake_install.cmake
Engine/include/: Configuration.hpp  Rehti.h  Rehti.hpp  Units.hpp
Engine/resources/shaders/: test.frag  test.vert
Engine/src/: Rehti.cpp
Engine/src/audio/: RehtiAudio.cpp  RehtiAudio.hpp
Engine/src/core/: AssetLoader.cpp  AssetLoader.h  AssetLoader.hpp  BasicAttributes.cpp  BasicAttributes.h  BasicAttributes.hpp  Configuration.cpp  EngineSubsystem.cpp  EngineSubsystem.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp  RehtiAlloc.cpp  RehtiAlloc.h  SubSystemBase.cpp  SubSystemBase.hpp  TaggedPointer.cpp  TaggedPointer.hpp
Engine/src/graphics/: Camera.cpp  Camera.h  Camera.hpp  DescriptorBuilder.cpp  DescriptorBuilder.h  DescriptorBuilder.hpp  EmbeddedShaders.hpp  GraphicsAssetCache.cpp  GraphicsAssetCache.h  GraphicsAssetCache.hpp  GraphicsResources.cpp  GraphicsResources.h  GraphicsResources.hpp  GraphicsTypes.cpp  GraphicsTypes.h  GraphicsTypes.hpp  PipelineManager.cpp  PipelineManager.hpp  RehtiGraphics.cpp  RehtiGraphics.hpp  Rehtigraphics.h  ShaderTools.cpp  ShaderTools.h  ShaderTools.hpp  UIManager.cpp  UIManager.hpp  Vertex.cpp  Vertex.h  Vertex.hpp  VulkanBackend.cpp  VulkanBackend.hpp
Engine/src/graphics/shaders/: test.frag  test.vert
Engine/src/input/: RehtiInput.cpp  RehtiInput.hpp
Engine/src/networking/: RehtiNetworking.cpp  RehtiNetworking.hpp
Engine/src/physics/: RehtiPhysics.cpp  RehtiPhysics.hpp
Engine/src/util/: GlmModule.ixx  ShadercModule.ixx
Engine/tools/: CMakeLists.txt  ShaderEmbedder.py
Tests/: CMakeLists.txt
Tests/src/: RehtiTests.cpp
